--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html, body, :global(#root) {
 }
 
 *{ margin:0; padding:0;}
-body{ font-size:14px; font-family:微软雅黑;font-style:normal;}
+body{ font-size:14px; font-family:微软雅黑;font-style:normal; background-color: #f2f3f5}
 a{ text-decoration:none}
 a,a:hover{  transition:background 0.5s linear;-webkit-transition:background 0.5s linear;-moz-transition:background 0.5s linear;-o-transition:background 0.5s linear;}
 em, i{font-style: normal;}
@@ -12,5 +12,4 @@ ul, ol, li{list-style: none;}
 img{ border:none;vertical-align:middle;}
 input,select,textarea{outline:none;border:none;background:none;}
 textarea{resize:none;}
-p{line-height:22px;}
 
