--- a/src/components/ItemList.less
+++ b/src/components/ItemList.less
@@ -1,13 +1,27 @@
 
+.listWrapper{
+  margin-top: 55px;
+  padding-top: 72px;
+}
+
 .pageNav{
   position: fixed;
-  top: 55px;
+  top: 54px;
   left: 0px;
   right: 0px;
   padding: 15px 0px;
   font-size: 15px;
-  color: #34495e;
   text-align: center;
+  border-radius: 2px;
+  box-shadow: 0px 1px 2px rgba(0,0,0,0.1);
+  background-color: #fff;
+  a{
+    color: #34495e;
+
+    &.inactive{
+      color: #cccccc;
+    }
+  }
 }
 
 .pageHint{
@@ -15,8 +29,10 @@
 }
 
 .itemList{
-  margin-top: 72px;
+  max-width: 800px;
+  margin: auto;
   margin-bottom: 30px;
+  background-color: #ffffff;
 }
 
 
