--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html, body, :global(#root) {
 }
 
 *{ margin:0; padding:0;}
-body{ font-size:14px; font-family:Roboto,Helvetica,sans-serif;font-style:normal; background-color: #f2f3f5}
+body{ font-size:14px; font-family:Roboto,Helvetica,sans-serif;font-style:normal;color: #34495e; background-color: #f2f3f5}
 a{ text-decoration:none; color: #34495e}
 a,a:hover{   transition:background 0.5s linear;-webkit-transition:background 0.5s linear;-moz-transition:background 0.5s linear;-o-transition:background 0.5s linear;}
 em, i{font-style: normal;}
